--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -147,7 +147,7 @@ button:hover {
     margin: auto;
     padding-top: 1em;
     padding-bottom: 1em;
-    margin-bottom: 2em;
+    margin-bottom: 0.2em;
     color: white;
     background-color: #333;
     box-shadow: lightgreen 0 0.2em;
@@ -200,6 +200,21 @@ button:hover {
     vertical-align: middle;
 }
 
+/*-------------------------------------------- MENU DROPDOWN -----------------------------------------------------------------------*/
+
+@-moz-keyframes dropHeader {
+    0% { -moz-transform: translateY(-1em); }
+    100% { -moz-transform: translateY(0); }
+}
+@-webkit-keyframes dropHeader {
+    0% { -webkit-transform: translateY(-1em); opacity: 0;}
+    100% { -webkit-transform: translateY(0); opacity: 1;}
+}
+@keyframes dropHeader {
+    0% { transform: translateY(-1em); opacity: 0;}
+    100% { transform: translateY(0); opacity: 1;}
+}
+
 .dropdown-button:focus {
     color: lightgreen;
     background-color: red;
@@ -211,10 +226,7 @@ button:hover {
     margin-top: 0.5em;
     margin-left: 4em;
     margin-right: 2em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding: 1em 0.5em 1em 0.5em;
     text-align: left;
     background-color: white;
     overflow: auto;
@@ -239,25 +251,77 @@ button:hover {
 
 .dropdown-show {
     display: block;
+    -moz-animation-name: dropHeader;
+    -moz-animation-iteration-count: 1;
+    -moz-animation-timing-function: ease;
+    -moz-animation-duration: 0.4s;
+
+    -webkit-animation-name: dropHeader;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease;
+    -webkit-animation-duration: 0.4s;
+
+    animation-name: dropHeader;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-duration: 0.4s;
+}
+
+/*-------------------------------------------------- SIDEBAR -----------------------------------------------------------------------*/
+
+#sidebar {
+    float: left;
+    width: 30%;
+    background-color: white;
+    box-shadow: lightgrey 0.1em 0em 0.2em;
+}
+
+#sidebar-title {
+    padding: 1em 2em 1.5em 2em;
+    text-align: center;
+    font-size: 1.25em;
+    box-shadow: lightgrey 0em 0.1em 0.1em;
+}
+
+#sidebar .sidebar-field {
+    padding-left: 6em;
+    box-shadow: lightgrey 0em 0.2em 0.2em;
+}
+
+#sidebar .sidebar-field i {
+    vertical-align: middle;
+    padding-right: 1em;
+}
+
+#sidebar .sidebar-field a {
+    width: 100%;
+    padding: 1em;
+    color: black;
+    text-decoration: none;
+}
+
+#sidebar .sidebar-field a:hover {
+    color: lightgrey;
 }
 
 /*-------------------------------------------------- HOME -----------------------------------------------------------------------*/
 
-p.codrops-demos a.current-demo,
-p.codrops-demos a.current-demo:hover{
-	color: #463523;
-	text-shadow: 0px 1px 1px rgba(255,255,255,0.3);
-	background: #ae8962;
-	background: -moz-linear-gradient(top, #ae8962 0%, #7a6044 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ae8962), color-stop(100%,#7a6044));
-	background: -webkit-linear-gradient(top, #ae8962 0%,#7a6044 100%);
-	background: -o-linear-gradient(top, #ae8962 0%,#7a6044 100%);
-	background: -ms-linear-gradient(top, #ae8962 0%,#7a6044 100%);
-	background: linear-gradient(top, #ae8962 0%,#7a6044 100%);
-}
 
 /*------------------------------------------------- LOGIN --------------------------------------------------------------------*/
 
+#login-help {
+    font-size: 0.8em;
+    padding: 1em 0em 0.5em 0em;
+}
+
+#login-help a {
+    color: black;
+}
+
+#login-help a:hover {
+    color: lightgrey;
+}
 
 
 /*------------------------------------------------ REGISTER ------------------------------------------------------------------*/
+    /*probabilmente non serve nulla qui*/
