--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -46,6 +46,7 @@ body {
 
 .container {
     width: 50%;
+    min-height: 22em;
     margin: auto;
     padding: 2em;
     -moz-border-radius: 5px;
@@ -63,6 +64,11 @@ body {
     margin-bottom: 1em;
 }
 
+.container-description {
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
 /*---------------------------------------------------- FORM ------------------------------------------------------------------*/
 
 .form-container{
@@ -70,17 +76,18 @@ body {
     margin: auto;
 }
 
-.form-container .form-field {
+.form-field {
     height: 2em;
 }
 
-.form-container label {
+.form-field > label {
     float: left;
     margin-top: 0.5em;
 }
 
-.form-container input {
+.form-field > input {
     float: right;
+
 }
 
 .form-field {
@@ -88,38 +95,29 @@ body {
     padding-bottom: 0.5em;
 }
 
-.form-submit {
+.form-vertical-block {
     margin-top: 1em;
+}
+
+.form-right-block {
+    float: right;
+    min-width: 16em;
+    font-size: 0.8em;
+    margin-top: 0.5em;
+    text-align: center;
+}
+
+.form-right-block > label {
+    margin: 0 0.5em 0 0.5em;
+}
+
+.form-right-block > input {
+    margin: 0.5em;
+}
+
+.form-submit {
+    margin-top: 2em;
     margin-bottom: 1em;
-}
-
-input {
-	font-size: 1em;
-	font-family: Verdana;
-	line-height: 2em;
-    padding-left: 0.5em;
-	border: 1px solid lightgray;
-	border-radius: 4px 4px 4px 4px;
-	-moz-border-radius: 4px 4px 4px 4px;
-	-webkit-border-radius: 4px 4px 4px 4px;
-    -o-border-radius: 4px 4px 4px 4px;
-    -ms-border-radius: 4px 4px 4px 4px;
-
-}
-
-.iconized-input {
-    padding-left: 3em;
-}
-
-.input-icon {
-    position: absolute;
-    margin-top: 0.2em;
-    margin-left: 0.5em;
-    vertical-align: middle;
-    color: #333;
-}
-
-button {
     font-family:'Helvetica Neue',Arial,sans-serif;
 	font-size:16px;
 	font-weight:700;
@@ -136,8 +134,33 @@ button {
 	-moz-box-shadow: rgba(0,0,0,0.2) 0 1px 0 1px;
 }
 
-button:hover {
+.form-submit:hover {
     box-shadow: lightgreen 0.1em 0.1em, lightgreen -0.1em -0.1em, lightgreen -0.1em 0.1em, lightgreen 0.1em -0.1em;
+}
+
+input {
+	font-size: 1em;
+	font-family: Verdana;
+	line-height: 2em;
+    padding-left: 0.5em;
+	border: 1px solid lightgray;
+	-moz-border-radius: 4px 4px 4px 4px;
+	-webkit-border-radius: 4px 4px 4px 4px;
+    -o-border-radius: 4px 4px 4px 4px;
+    -ms-border-radius: 4px 4px 4px 4px;
+    border-radius: 4px 4px 4px 4px;
+}
+
+.iconized-input {
+    padding-left: 3em;
+}
+
+.input-icon {
+    position: absolute;
+    margin-top: 0.2em;
+    margin-left: 0.5em;
+    vertical-align: middle;
+    color: #333;
 }
 
 /*---------------------------------------------------- HEADER ------------------------------------------------------------------*/
@@ -145,9 +168,9 @@ button:hover {
 #header {
     width: 100%;
     margin: auto;
+    margin-bottom: 2em;
     padding-top: 1em;
     padding-bottom: 1em;
-    margin-bottom: 0.2em;
     color: white;
     background-color: #333;
     box-shadow: lightgreen 0 0.2em;
@@ -200,17 +223,48 @@ button:hover {
     vertical-align: middle;
 }
 
+/*----------------------------------------------- FOOTER --------------------------------------------*/
+
+#footer{
+    width: 100%;
+    margin: auto;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    margin-top: 2em;
+    color: white;
+    background-color: #333;
+    box-shadow: lightgreen 0 -0.2em;
+}
+
+#footer #title {
+    font-size: 2.2em;
+    margin-left: 2em;
+    margin-right: 2em;
+}
+
+#footer a {
+    margin-left: 1em;
+    margin-right: 1em;
+    color: white;
+    text-decoration: none;
+}
+
+#footer a:hover {
+    color: lightgreen;
+
+}
+
 /*-------------------------------------------- MENU DROPDOWN -----------------------------------------------------------------------*/
 
-@-moz-keyframes dropHeader {
+@-moz-keyframes dropDown {
     0% { -moz-transform: translateY(-1em); }
     100% { -moz-transform: translateY(0); }
 }
-@-webkit-keyframes dropHeader {
+@-webkit-keyframes dropDown {
     0% { -webkit-transform: translateY(-1em); opacity: 0;}
     100% { -webkit-transform: translateY(0); opacity: 1;}
 }
-@keyframes dropHeader {
+@keyframes dropDown {
     0% { transform: translateY(-1em); opacity: 0;}
     100% { transform: translateY(0); opacity: 1;}
 }
@@ -251,17 +305,17 @@ button:hover {
 
 .dropdown-show {
     display: block;
-    -moz-animation-name: dropHeader;
+    -moz-animation-name: dropDown;
     -moz-animation-iteration-count: 1;
     -moz-animation-timing-function: ease;
     -moz-animation-duration: 0.4s;
 
-    -webkit-animation-name: dropHeader;
+    -webkit-animation-name: dropDown;
     -webkit-animation-iteration-count: 1;
     -webkit-animation-timing-function: ease;
     -webkit-animation-duration: 0.4s;
 
-    animation-name: dropHeader;
+    animation-name: dropDown;
     animation-iteration-count: 1;
     animation-timing-function: ease;
     animation-duration: 0.4s;
@@ -270,10 +324,25 @@ button:hover {
 /*-------------------------------------------------- SIDEBAR -----------------------------------------------------------------------*/
 
 #sidebar {
-    float: left;
-    width: 30%;
+    position: absolute;
+    width: 22%;
+    min-height: 26em;
     background-color: white;
     box-shadow: lightgrey 0.1em 0em 0.2em;
+    -moz-animation-name: dropDown;
+    -moz-animation-iteration-count: 1;
+    -moz-animation-timing-function: ease;
+    -moz-animation-duration: 1s;
+
+    -webkit-animation-name: dropDown;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease;
+    -webkit-animation-duration: 1s;
+
+    animation-name: dropDown;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-duration: 1s;
 }
 
 #sidebar-title {
@@ -284,7 +353,7 @@ button:hover {
 }
 
 #sidebar .sidebar-field {
-    padding-left: 6em;
+    padding-left: 3em;
     box-shadow: lightgrey 0em 0.2em 0.2em;
 }
 
@@ -315,7 +384,9 @@ button:hover {
 }
 
 #login-help a {
+    display: inline-block;
     color: black;
+    vertical-align: top;
 }
 
 #login-help a:hover {
@@ -325,3 +396,45 @@ button:hover {
 
 /*------------------------------------------------ REGISTER ------------------------------------------------------------------*/
     /*probabilmente non serve nulla qui*/
+
+
+/*--------------------------------------------- PROFILE ------------------------------------------------------------------*/
+
+#left-arrow {
+    position: absolute;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: -1em;
+    margin-top: -0.3em;
+}
+
+#avatar-label {
+    margin-top: 5em;
+}
+
+#dropzone-container {
+    float: right;
+}
+
+#dropzone {
+    display: inline-block;
+    max-height: 10em;
+    max-width: 10em;
+    margin: 0 1em 1em 1em;
+}
+
+.dropzone-description {
+    padding-top: 1.5em;
+    margin-left: 0.1em;
+    margin-right: 0.1em;
+}
+
+#preview {
+    display: inline-block;
+    margin: 1em;
+}
+
+#preview img {
+    width: 6em;
+    height: 6em;
+}
