--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background-color: #EAFAFA;
+    background-color: #EEFAFA;    /*EEFAFA*/
 }
 
 .material-icons {
@@ -119,7 +119,7 @@ body {
     margin: 0.5em;
 }
 
-.form-submit {
+.form-submit, .button {
     margin-top: 2em;
     margin-bottom: 1em;
     font-family:'Helvetica Neue',Arial,sans-serif;
@@ -127,6 +127,7 @@ body {
 	font-weight:700;
 	padding: 0.6em 3em;
 	text-shadow: black 1px 1px 2px;
+    text-decoration: none;
 	color: white;
 	background-color: #333;
 	border: none;
@@ -138,7 +139,7 @@ body {
 	-moz-box-shadow: rgba(0,0,0,0.2) 0 1px 0 1px;
 }
 
-.form-submit:hover {
+.form-submit:hover, .button:hover {
     box-shadow: lightgreen 0.1em 0.1em, lightgreen -0.1em -0.1em, lightgreen -0.1em 0.1em, lightgreen 0.1em -0.1em;
 }
 
@@ -556,20 +557,45 @@ input {
     padding: 1em 0em 0.5em 0em;
 }
 
-#login-help a {
+.help-link {
     display: inline-block;
     color: black;
     vertical-align: top;
 }
 
-#login-help a:hover {
+.help-link:hover {
     color: lightgrey;
 }
 
-
 /*------------------------------------------------ REGISTER ------------------------------------------------------------------*/
-    /*probabilmente non serve nulla qui*/
 
+#successful-registration {
+    padding-top: 2em;
+}
+
+#registered-email {
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
+#successful-registration p {
+    padding-bottom: 1em;
+}
+
+#successful-registration-login {
+    margin-bottom: 2em;
+}
+
+#errors {
+    padding-top: 1em;
+    color: red;
+}
+
+/*-------------------------------------------- RESET PASSWORD ------------------------------------------------------------------*/
+
+#reset-password form {
+    margin-top: 2em;
+}
 
 /*--------------------------------------------- PROFILE ------------------------------------------------------------------*/
 
@@ -610,4 +636,28 @@ input {
 #preview img {
     width: 6em;
     height: 6em;
+}
+
+
+/*------------------------------------------- ERROR 404 ------------------------------------------------------------------*/
+
+#sorry {
+    font-family: arial;
+}
+
+#alert {
+    display: block;
+    font-size: 10em;
+    margin: auto;
+    padding-top: 0.2em;
+    color: lightgray;
+}
+
+#links a {
+    color: black;
+    text-decoration: none;
+}
+
+#links a:hover {
+    color: lightgray;
 }
