--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -15,6 +15,11 @@ body {
     background-color: #EEFAFA;    /*EEFAFA*/
 }
 
+/*#content {
+    display: block;
+    min-height: 100%;
+}
+*/
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
