--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -838,6 +838,11 @@ input {
     color: lightgray;
 }
 
+/*--------------------------------------------- EXTERNAL DATABASES --------------------------------------------------------------*/
+#external-databases {
+    text-align: center;
+}
+
 /*------------------------------------------------ EDITOR --------------------------------------------------------------*/
 #editor {
         position: absolute;
