--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -114,6 +114,10 @@ body {
     width: 35%;
 }
 
+.table-spacing {
+    width: 1.8em;
+}
+
 .table-header span, .table-row span {
     display: inline-block;
     padding-top: 1em;
@@ -218,6 +222,18 @@ body {
     box-shadow: lightgreen 0.1em 0.1em, lightgreen -0.1em -0.1em, lightgreen -0.1em 0.1em, lightgreen 0.1em -0.1em;
 }
 
+.iconized-input {
+    padding-left: 3em;
+}
+
+.input-icon {
+    position: absolute;
+    margin-top: 0.2em;
+    margin-left: 0.5em;
+    vertical-align: middle;
+    color: #333;
+}
+
 input {
 	font-size: 1em;
 	font-family: Verdana;
@@ -231,17 +247,60 @@ input {
     border-radius: 4px 4px 4px 4px;
 }
 
-.iconized-input {
-    padding-left: 3em;
+
+
+/*---------------------------------------------------- MATERIAL DESIGN TOGGLE ----------------------------------------------*/
+.lbl {
+    position: relative;
+    display: block;
+    height: 20px;
+    width: 44px;
+    background: #898989;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-.input-icon {
+.lbl:after {
     position: absolute;
-    margin-top: 0.2em;
-    margin-left: 0.5em;
-    vertical-align: middle;
-    color: #333;
+    left: -2px;
+    top: -3px;
+    display: block;
+    width: 26px;
+    height: 26px;
+    border-radius: 100px;
+    background: #fff;
+    box-shadow: 0px 3px 3px rgba(0,0,0,0.05);
+    content: '';
+    transition: all 0.3s ease;
 }
+
+.lbl:active:after { 
+    transform: scale(1.15, 0.85);
+}
+
+.cbx:checked ~ label { 
+    background: #6fbeb5;
+}
+
+.cbx:checked ~ label:after {
+    left: 20px;
+    background: #179588;
+}
+
+.cbx:disabled ~ label {
+    background: #d5d5d5;
+    pointer-events: none;
+}
+
+.cbx:disabled ~ label:after {
+    background: #bcbdbc;
+}
+ 
+.hidden {
+    display: none;
+}
+
 
 /*---------------------------------------------------- HEADER ------------------------------------------------------------------*/
 #header {
@@ -838,10 +897,6 @@ input {
     color: lightgray;
 }
 
-/*--------------------------------------------- EXTERNAL DATABASES --------------------------------------------------------------*/
-#external-databases {
-    text-align: center;
-}
 
 /*------------------------------------------------ EDITOR --------------------------------------------------------------*/
 #editor {
@@ -886,6 +941,21 @@ input {
     margin: auto;
     margin-left: 1%;
     text-align: left;
+}
+
+/*------------------------------------------------ DELETE USER --------------------------------------------------------------*/
+#delete-user {
+    display: inline;
+}
+
+#delete-user i {
+    cursor: pointer;
+    vertical-align: middle;
+    padding: 0.1em;
+}
+
+#delete-user i:hover {
+    color: red;
 }
 
 /*------------------------------------------------ INVITE --------------------------------------------------------------*/
@@ -934,3 +1004,25 @@ input {
     font-size: 1.5em;
     padding: 0.1em;
 }
+
+
+/*------------------------------------------------ EXTERNALDATABASES ---------------------------------------------------------*/
+
+.externaldb{
+    max-width: 400px;
+    margin: 10px auto;
+    padding: 16px;
+}
+
+.externaldb input{
+   
+    outline: none;
+    box-sizing: border-box;
+    width: 100%;
+    background: #fff;
+    margin-bottom: 4%;
+    border: 1px solid #ccc;
+    padding: 3%;
+}
+
+
